fixed extra white space + added names : )

--- a/ruthirsty/src/App.css
+++ b/ruthirsty/src/App.css
@@ -4,7 +4,7 @@
 
 .App-header {
   background-color: #FCFFE7;
-  min-height: 150vh;
+  min-height: 90vh;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -16,7 +16,7 @@
 }
 
 #logo {
-  width: 300px;
+  width: 205px;
   height: auto;
   margin: 0;
   transform: rotate(-90deg);
@@ -26,7 +26,15 @@
 h1 {
   font-family: "Courier New";
   color: #EB455F;
-  margin-top: -150px;  /* Adjust as needed to reduce space below the logo */
+  margin-top: -100px;  /* Adjust as needed to reduce space below the logo */
+}
+
+h2 {
+  font-family: "Courier New";
+  font-weight: bolder;
+  font-size: smaller;
+  color: #000000;
+  margin-top: 80px;
 }
 
 
